tests/ui/lint/snapshots/always_true_disjunction_unsigned_type_boundary.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Always-true comparison
   ╭─[test.lis:4:11]
 3 │   let x: uint8 = 5
 4 │   let _ = x > 0 || x == 0
   ·           ───────┬───────
   ·                  ╰── always `true`
 5 │ }
   ╰────
  help: Every value satisfies at least one side, so this `||` is always `true`. Check the bounds, or did you mean `&&`? · code: [infer.always_true_disjunction]
